--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -14,7 +14,7 @@ body {
 
 .navigation-wrapper {
 	@include container;
-	padding: 2em 0 1em;
+	padding: 1em 0 0.5em;
 	font-family: $heading-font;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -26,15 +26,15 @@ body {
 	@include grid(12,10);
 	@include prefix(12,1);
 	@include suffix(12,1);
-	margin-bottom: 1em;
+	margin-bottom: 0.5em;
 	float: none;
 	display: block;
-	@include font-rem(24);
+	@include font-rem(42);
 	@media #{$small} {
 		@include grid(12,2);
 		@include prefix(12,0.5);
 		@include suffix(12,0.5);
-		@include font-rem(16);
+		@include font-rem(28);
 	}
 	@media #{$x-large} {
 		@include grid(12,1.5);
@@ -50,6 +50,7 @@ body {
 	margin-bottom: 1em;
 	float: none;
 	display: block;
+	padding-top: 1.5rem;
 	@media #{$small} {
 		@include grid(12,9);
 		@include prefix(12,0);
@@ -69,7 +70,7 @@ body {
 		list-style-type: none;
 		border-bottom: 1px solid lighten($black,80);
 		border-bottom: 1px solid fade($black,10);
-		@include font-rem(16);
+		@include font-rem(20);
 		&:last-child {
 			border-bottom: 0 solid transparent;
 		}
@@ -310,7 +311,7 @@ $button-size: 1.5rem;
 	}
 	img {
 		width: 100%;
-		height: auto;
+		height: 20rem;
 		-ms-interpolation-mode: bicubic;
 	}
 	.headline-wrap {
