--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,10 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
-{% include _head.html %}
+    {% include _head.html %}
 </head>
 
-<body class="post">
+<body class="post" data-spy="scroll" data-target="#drawer">
 
 {% include _browser-upgrade.html %}
 
@@ -72,6 +72,7 @@
 </div><!-- /.footer-wrap -->
 
 {% include _scripts.html %}
+{% include _scrollspy.html %}
 
 </body>
 </html>
