fix nested toc ul tags

--- a/_includes/_scrollspy.html
+++ b/_includes/_scrollspy.html
@@ -3,6 +3,6 @@
 <script>
 $(document).ready(function() {
     // executes when HTML-Document is loaded and DOM is ready
-    $( "#drawer > ul" ).addClass( "nav nav-tabs nav-stacked" )
+    $( "#drawer" ).find("ul").addClass( "nav nav-tabs nav-stacked" )
 });
 </script>
