--- a/_includes/_social-share.html
+++ b/_includes/_social-share.html
@@ -10,5 +10,8 @@
     <li>
       <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" class="google-plus" title="Share on Google Plus"><i class="fa fa-google-plus"></i><span> Google+</span></a>
     </li>
+    <li>
+      <a href="https://www.linkedin.com/shareArticle?url={{ site.url }}{{ page.url }}&mini=true" class="linkedin" title="Share on Linkedin"><i class="fa fa-linkedin"></i><span> Linkedin</span></a>
+    </li>
   </ul>
 </div><!-- /.social-share -->
