--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -27,3 +27,7 @@
         src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
+<!--highlight.js-->
+<link rel="stylesheet" href="{{ site.url }}/assets/css/highlight.js/monokai_sublime.css">
+<script src="{{ site.url }}/assets/js/plugins/highlight.pack.js"></script>
+<script> hljs.initHighlightingOnLoad(); </script>
