--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -460,7 +460,7 @@ $button-size: 1.5rem;
 		position: fixed;
 		top: 5.5em;
 		right: 0;
-		background-color: $white;
+		background-color: transparent;
 	}
 	header {
 		background: lighten($black, 10);
