--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,6 +52,9 @@
     <section id="disqus_thread"></section><!-- /#disqus_thread -->
   {% endif %}
   </article>
+  <div class="article-toc-side">
+    {% include _toc.html %}
+  </div>  
 </div><!-- /#main -->
 
 <div class="footer-wrap">
