--- a/_includes/_toc.html
+++ b/_includes/_toc.html
@@ -1,4 +1,4 @@
-<section id="table-of-contents" class="toc">
+<!--section id="table-of-contents" class="toc">
 <header>
 <h3><i class="fa fa-book"></i> Overview</h3>
 </header>
@@ -6,4 +6,7 @@
 * Auto generated table of contents
 {:toc}
 </div>
-</section><!-- /#table-of-contents -->
+</section--><!-- /#table-of-contents -->
+<nav id="table-of-contents" class=" bs-docs-sidebar">
+	<div id="toc"></div>
+</nav>
