--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -529,6 +529,57 @@ $button-size: 1.5rem;
 	}
 }
 
+/*TOC*/
+.bs-docs-sidebar {
+    display:none;
+    padding-left: 5px;
+    font-size: 95%;
+
+	@media #{$x-large} {
+		display:block;
+	}  
+	@media #{$large} {
+		display:block;
+	}  
+
+	/*ul*/
+	.nav { 
+		@include font-rem(24);
+		font-family: $heading-font;
+		list-style-type: none;
+		ul.nav {
+    		display: none;           
+		}
+
+		>li>a {
+		    color: #999;
+		    padding: 4px 20px;
+		    font-weight: 400;
+		    border-right: 2px solid transparent;    
+		}
+
+		.nav>li>a {
+	    	padding-top: 1px;
+	    	padding-bottom: 1px;
+	    	padding-left: 30px;
+	    }		
+
+		>.active>a,
+		>li>a:hover,
+		>li>a:focus {
+	    	color: #563d7c;                 
+	    	text-decoration: none;          
+	    	background-color: transparent;  
+	    	border-left: 2px solid #563d7c; 
+	    }	
+
+	    >.active>ul.nav {
+    		display: block;   
+		}   
+	}
+}
+
+
 /* TOC trigger for collapsing */
 #drawer {
 	max-height: 100%;
