--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -29,6 +29,7 @@ $bordercolor    : $basecolor;
 $white          : #fff;
 $black          : #111;
 $accentcolor    : $black;
+$contentbgcolor : #e8e8e8;
 
 /* buttons */
 $primary			: $black;
