--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -63,6 +63,16 @@
 	}
 }
 
+.inline-list {
+	list-style: none;
+	margin-left: 0;
+	padding-left: 0;
+	li {
+		list-style-type: none;
+		display: inline;
+	}
+}
+
 /*
    Global transition
    ========================================================================== */
