--- a/_includes/_scrollspy.html
+++ b/_includes/_scrollspy.html
@@ -3,8 +3,6 @@
 <script src="{{ site.url }}/assets/js/toc.min.js"></script>
 <style>
 .affix{position:fixed;top:0px;}
-/* all links */
-
 </style>
 <script>
 $(document).ready(function() {
@@ -12,6 +10,7 @@ $(document).ready(function() {
     $('#toc').toc({
     	noBackToTopLinks: true,
     	title: '',
+    	headers: 'h1, h2, h3, h4, h5, h6',
     	listType: 'ul',
     	showEffect: 'none'
     });
