--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -7,7 +7,7 @@
 {% include _head.html %}
 </head>
 
-<body class="post-index">
+<body id="post-index" class="post-index">
 
 {% include _browser-upgrade.html %}
 
@@ -32,25 +32,14 @@
   <div class="article-author-side">
     {% include _author-bio.html %}
   </div>
-  <div id="index">
-    <h1>{{ page.title }}</h1>
-    {% capture written_year %}'None'{% endcapture %}
-    {% for post in site.posts %}  
-      {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-      {% if year != written_year %}
-        <h3>{{ year }}</h3>
-        {% capture written_year %}{{ year }}{% endcapture %}
-      {% endif %}
-      <article>
-        {% if post.link %}
-          <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></a></h2>
-        {% else %}
-          <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
-          <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
-        {% endif %}
-      </article>
-    {% endfor %}
+  <div id="index" class="content-wrap">
+    {{ content }}
   </div><!-- /#index -->
+  {% if page.show_toc %}
+    <div class="article-toc-side">
+      {% include _toc.html %}
+    </div>  
+  {% endif %}
 </div><!-- /#main -->
 
 <div class="footer-wrap">
@@ -60,6 +49,8 @@
 </div><!-- /.footer-wrap -->
 
 {% include _scripts.html %}
-
+{% if page.show_toc %}
+  {% include _scrollspy.html %}
+{% endif %}  
 </body>
 </html>
