--- a/_includes/_scrollspy.html
+++ b/_includes/_scrollspy.html
@@ -8,7 +8,7 @@
 $(document).ready(function() {
 	//https://github.com/ghiculescu/jekyll-table-of-contents
     $('#toc').toc({
-    	noBackToTopLinks: true,
+    	noBackToTopLinks: false,
     	title: '',
     	headers: 'h1, h2, h3, h4, h5, h6',
     	listType: 'ul',
